--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.16.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.21.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -36,14 +37,20 @@
   },
   "dependencies": {
     "@carpenjk/prop-x": "^1.0.2",
-    "styled-components": "^5.1.1",
+    "@carpenjk/scroll-lock": "github:carpenjk/scroll-lock",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.1.1"
   },
   "peerDependencies": {
     "@carpenjk/prop-x": "^1.0.2",
     "styled-components": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
