ci(added commitizen): added commitizen

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "This is a lightbox for images.",
   "main": "lib/index.js",
   "scripts": {
+    "prebuild": "rimraf lib",
     "build": "babel src -d lib",
+    "prepublish": "npm run build",
+    "postinstall": "npm run build",
+    "commit": "git-cz",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
