--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.30.1"
+    "eslint-plugin-react": "^7.30.1",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "@carpenjk/prop-x": "^1.0.2",
