--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
   },
   "peerDependencies": {
     "@carpenjk/prop-x": "^1.0.2",
-    "styled-components": "^5.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.1.1"
   },
   "config": {
     "commitizen": {
