--- a/.github/workflows/push-pull.js.yml
+++ b/.github/workflows/push-pull.js.yml
@@ -27,7 +27,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: git config --global url."https://$GITHUB_PAT@github.com/".insteadOf ssh://git@github.com/
+        persist-credential: false
+    - run: git config --global url."https://${{ secrets.PAT }}@github.com/".insteadOf ssh://git@github.com/
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test --if-present
