ci(package.json): reverted script backt o postinstall from preinstall

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "rimraf lib",
     "build": "babel src -d lib",
     "prepublish": "npm run build",
-    "preinstall": "npm run build",
+    "postinstall": "npm run build",
     "commit": "git-cz"
   },
   "repository": {
