--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "rimraf": "^3.0.2"
   },
   "peerDependencies": {
-    "@carpenjk/hooks": "git+https://git@github.com/carpenjk/hooks.git",
+    "@carpenjk/hooks": "github:carpenjk/hooks",
     "@carpenjk/prop-x": "^1.0.2",
     "@carpenjk/scroll-lock": "git+https://git@github.com/carpenjk/scroll-lock.git",
     "react": "^17.0.2",
