--- a/package.json
+++ b/package.json
@@ -39,12 +39,11 @@
     "rimraf": "^3.0.2"
   },
   "peerDependencies": {
-    "@carpenjk/hooks": "github:carpenjk/hooks",
     "@carpenjk/prop-x": "^2.0.3",
-    "@carpenjk/scroll-lock": "git+https://git@github.com/carpenjk/scroll-lock.git",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "body-scroll-lock": "^3.1.5"
   },
   "config": {
     "commitizen": {
