--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
   },
   "peerDependencies": {
     "@carpenjk/prop-x": "^2.0.3",
+    "body-scroll-lock": "^3.1.5",
     "react": "17 - 18",
     "react-dom": "17 - 18",
     "styled-components": "^5.1.1",
-    "body-scroll-lock": "^3.1.5"
+    "react-portal": "^4.2.2"
   },
   "config": {
     "commitizen": {
