--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "react-portal": "^4.2.2",
     "styled-components": "^5.1.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
