--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.16.0",
+    "@carpenjk/prop-x": "^3.0.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.21.0",
     "eslint-config-standard": "^17.0.0",
@@ -46,7 +47,7 @@
     "semantic-release": "^19.0.5"
   },
   "peerDependencies": {
-    "@carpenjk/prop-x": "^2.0.3",
+    "@carpenjk/prop-x": "^3.0.1 || ^2.0.0",
     "body-scroll-lock": "^3.1.5",
     "react": "17 - 18",
     "react-dom": "17 - 18",
